--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-    </head>
-    <body>
-        Hello, {{ isim }}
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %} Home - {{ block.super }} {% endblock %}
+
+{% block body %}
+
+    Hello, {{ isim }}
+
+{% endblock %}
