--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Index</title>
-    </head>
-    <body>
-        {% for post in posts %}
-            {{ post.id }} <br/>
-            <a href="{{ post.get_absolute_url }}">{{ post.title }} </a> <br/>
-            {{ post.content }} <br/>
-            {{ post.publishing_date }} <br/>
-        {% endfor %}
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block body %}
+
+    {% for post in posts %}
+        {{ post.id }} <br/>
+        <a href="{{ post.get_absolute_url }}">{{ post.title }} </a> <br/>
+        {{ post.content }} <br/>
+        {{ post.publishing_date }} <br/>
+    {% endfor %}
+
+{% endblock %}
