--- a/templates/home.html
+++ b/templates/home.html
@@ -6,4 +6,12 @@
 
     Hello, {{ isim }}
 
+    <div class="container">
+        <div class="row">
+            
+
+
+        </div>
+    </div>
+
 {% endblock %}
