--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -2,11 +2,24 @@
 
 {% block body %}
 
-    {% for post in posts %}
-        {{ post.id }} <br/>
-        <a href="{{ post.get_absolute_url }}">{{ post.title }} </a> <br/>
-        {{ post.content }} <br/>
-        {{ post.publishing_date }} <br/>
-    {% endfor %}
+    <div class="container">
+        {% for post in posts %}
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="thumbnail">
+                        <div class="caption">
+                            <h3>{{ post.title }} <small> {{ post.publishing_date | timesince}} ago</small> </h3>
+                            <p>{{ post.content | linebreaks | truncatechars:50}}</p>
+                            <p>
+                                <a href="{{ post.get_absolute_url }}" class="btn btn-primary" role="button">İncele</a>
+                                <a href="{{ post.get_update_url }}" class="btn btn-default" role="button">Güncelle</a>
+                                <a href="{{ post.get_delete_url }}" class="btn btn-danger" role="button">Sil</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
