--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -7,6 +7,10 @@
         <div class="col-md-6 col-md-offset-3">
             <div class="thumbnail">
                 <div class="caption">
+                    {% if post.image %}
+                        <img src="{{ post.image.url }}" class="img-responsive">
+                    {% endif %}
+                    <img src="{{ post.image.url }}" class="img-responsive">
                     <h3>{{ post.title }} <small> {{ post.publishing_date }}</small> </h3>
                     <p>{{ post.content | linebreaks}}</p>
                     <p>
