--- a/templates/post/form.html
+++ b/templates/post/form.html
@@ -2,13 +2,19 @@
 
 {% block body %}
 
-    <form method="POST">
-        {% csrf_token %}
-        <h1>Form</h1>
-        {{ form.as_p }}
-        
-        <input type="submit" value="Submit" >
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <h1>Form</h1>
+                    {{ form.as_p }}
+                    
+                    <input class="btn btn-primary" type="submit" value="Submit" >
+                </form>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
         
