--- a/templates/header.html
+++ b/templates/header.html
@@ -30,7 +30,9 @@
 
             <!-- Temel Sayfalar -->
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{% url 'post:create' %}">New Post</a></li>
+                {% if request.user.is_authenticated %}
+                    <li><a href="{% url 'post:create' %}">New Post</a></li>
+                {% endif %}
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'post:index' %}">Blog</a></li>
                 <li><a href="#">About Us</a></li>
