--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -9,14 +9,16 @@
                 <div class="caption">
                     {% if post.image %}
                         <img src="{{ post.image.url }}" class="img-responsive">
+                        <img src="{{ post.image.url }}" class="img-responsive">
                     {% endif %}
-                    <img src="{{ post.image.url }}" class="img-responsive">
                     <h3>{{ post.title }} <small> {{ post.publishing_date }}</small> </h3>
                     <p>{{ post.content | linebreaks}}</p>
                     <p>
                         <a href="{{ post.get_absolute_url }}" class="btn btn-primary" role="button">İncele</a>
-                        <a href="{{ post.get_update_url }}" class="btn btn-default" role="button">Güncelle</a>
-                        <a href="{{ post.get_delete_url }}" class="btn btn-danger" role="button">Sil</a>
+                        {% if request.user.is_authenticated %}
+                            <a href="{{ post.get_update_url }}" class="btn btn-default" role="button">Güncelle</a>
+                            <a href="{{ post.get_delete_url }}" class="btn btn-danger" role="button">Sil</a>
+                        {% endif %}
                     </p>
                 </div>
             </div>
