--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -12,6 +12,7 @@
                         <img src="{{ post.image.url }}" class="img-responsive">
                     {% endif %}
                     <h3>{{ post.title }} <small> {{ post.publishing_date }}</small> </h3>
+                    <h4> Yazar: {{ post.user.get_full_name }} </h4>
                     <p>{{ post.content | safe | linebreaks}}</p>
                     <p>
                         <a href="{{ post.get_absolute_url }}" class="btn btn-primary" role="button">İncele</a>
@@ -22,6 +23,18 @@
                     </p>
                 </div>
             </div>
+
+            <br><br><hr>
+            <h3>Add Comment</h3>
+            {% include 'post/comment.html' %}
+            <hr>
+
+            {% for comment in post.comments.all %}
+                <h4> {{ comment.name}} | <small>{{ comment.created_date }}</small></h4>
+                <p> {{ comment.content | linebreaks }} </p>
+                <hr>
+            {% endfor %}
+
         </div>
     </div>
     </div>
