--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -12,6 +12,7 @@
                                 <img src="{{ post.image.url }}" class="img-responsive">
                             {% endif %}
                             <h3>{{ post.title }} <small> {{ post.publishing_date | timesince}} ago</small> </h3>
+                            <h4> Yazar: {{ post.user.get_full_name }} </h4>
                             <p>{{ post.content | safe | linebreaks | truncatechars:50}}</p>
                             <p>
                                 <a href="{{ post.get_absolute_url }}" class="btn btn-primary" role="button">İncele</a>
