--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -26,6 +26,29 @@
                 </div>
             </div>
         {% endfor %}
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="pagination">
+                    <span class="step-links">
+                        {% if posts.has_previous %}
+                            <a href="?page=1">&laquo; first</a>
+                            <a href="?page={{ contacts.previous_page_number }}">previous</a>
+                        {% endif %}
+                
+                        <span class="current">
+                            Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
+                        </span>
+                
+                        {% if posts.has_next %}
+                            <a href="?page={{ posts.next_page_number }}">next</a>
+                            <a href="?page={{ posts.paginator.num_pages }}">last &raquo;</a>
+                        {% endif %}
+                    </span>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
 {% endblock %}
