--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -32,8 +32,8 @@
                 <div class="pagination">
                     <span class="step-links">
                         {% if posts.has_previous %}
-                            <a href="?page=1">&laquo; first</a>
-                            <a href="?page={{ contacts.previous_page_number }}">previous</a>
+                            <a href="?page=1{% if request.GET.q %}&q={{ request.GET.q }} {% endif %}">&laquo; first</a>
+                            <a href="?page={{ contacts.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }} {% endif %}">previous</a>
                         {% endif %}
                 
                         <span class="current">
@@ -41,8 +41,8 @@
                         </span>
                 
                         {% if posts.has_next %}
-                            <a href="?page={{ posts.next_page_number }}">next</a>
-                            <a href="?page={{ posts.paginator.num_pages }}">last &raquo;</a>
+                            <a href="?page={{ posts.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }} {% endif %}">next</a>
+                            <a href="?page={{ posts.paginator.num_pages }}{% if request.GET.q %}&q={{ request.GET.q }} {% endif %}">last &raquo;</a>
                         {% endif %}
                     </span>
                 </div>
