--- a/templates/header.html
+++ b/templates/header.html
@@ -37,6 +37,13 @@
                 <li><a href="{% url 'post:index' %}">Blog</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
+
+                {% if not request.user.is_authenticated %}
+                    <li><a href="{% url 'accounts:register' %}">Register</a></li>
+                    <li><a href="{% url 'accounts:login' %}">Login</a></li>
+                {% else %}
+                    <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
+                {% endif %}
             </ul>
 
         </nav>
