--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
         <title>{% block title %} Django Blog {% endblock %}</title>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        
+        <link rel="stylesheet" href="{% static 'css/404.css' %}">
     </head>
     <body>
 
@@ -17,7 +19,6 @@
         {% block body %}
 
         {% endblock %}
-
 
         <script src="{% static 'js/jquery.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
